2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: bumped version number, added switch for lua, increased required versions of the WF libs

2005-10-14  Erik Hjortsberg  <erik@katastrof.nu>

	* src/framework/Makefile.am, src/framework/scrap.*, src/components/ogre/input/Input.*: added support for paste operations from the system clipboard

2005-10-13  Erik Hjortsberg  <erik@katastrof.nu>

	* acinclude:m4, src/services/config/ConfigService.*, src/services/config/Makefile.am, src/framework/binreloc.*, src/framework/Makefile.am, src/framework/prefix.*, src/components/ogre/EmberOgre.cpp, src/components/ogre/Makefile.am: upgraded to binreloc 2.0

2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: added nostdinc, tar-bzip2 and check-news to get cleaner builds
	* all Makefile.am: update to adapt to nostdinc

2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarCamera.cpp, src/components/ogre/EmberEntityUserObject.h, src/components/ogre/EmberOgre.cpp, src/components/ogre/EmberPhysicalEntity.cpp: adapt to updated OgreOpcode

2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/ogreopcode/*: updated to OgreOpcode 0.0.4

2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.bat: use the APPDATA environment variable since it works on all locales

2005-10-11  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: bump version to 0.3.3

2005-10-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/XMLModelDefinitionsSerializer.cpp: fixed an error when parsing Vector3
	* src/components/ogre/modeldefinitions/item.modeldef.xml: add a translation offset to the trowel so it sticks up a bit from the ground

2005-10-11  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.bat: added some notion about the size of the download