@@ -1,0 +1,5 @@
+INCLUDES = -I$(top_srcdir)/src -I$(top_builddir)/src
+METASOURCES = AUTO
+noinst_LIBRARIES = libScriptingService.a
+noinst_HEADERS = ScriptingService.h
+libScriptingService_a_SOURCES = ScriptingService.cpp
